--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://mushtaq220.github.io",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
